--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
-    "sass": "^1.64.1"
+    "sass": "^1.64.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
   },
   "scripts": {
     "start": "react-scripts start",
