--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^1.6.2",
-    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
-    "sass": "^1.64.1",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "sass": "^1.64.1"
   },
   "scripts": {
     "start": "react-scripts start",
