--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "sass": "^1.64.1"
   },
   "scripts": {
