Updated GitHub actions (#18)
* moved github actions files to the correct location
* updated action files

--- a/.github/workflows/client-build.yml
+++ b/.github/workflows/client-build.yml
@@ -1,6 +1,6 @@
 name: React Build
 
-on: [pull_request, push]
+on: pull_request
 
 jobs:
   build:
@@ -14,11 +14,10 @@ jobs:
         with:
           node-version: "20"
 
-      - name: Change to client directory
-        run: cd client
-
       - name: Install dependencies
         run: npm install
+        working-directory: ./client
 
       - name: Build React App
         run: npm run build
+        working-directory: ./client
