--- a/.github/workflows/client-tests.yml
+++ b/.github/workflows/client-tests.yml
@@ -1,6 +1,6 @@
 name: React Unit Tests
 
-on: [pull_request, push]
+on: pull_request
 
 jobs:
   test:
@@ -14,11 +14,10 @@ jobs:
         with:
           node-version: "20"
 
-      - name: Change to client directory
-        run: cd client
-
       - name: Install dependencies
         run: npm install
+        working-directory: ./client
 
       - name: Run tests
         run: npm test
+        working-directory: ./client
